force-app/main/default/objects/Candidate__c/fields/Active_Submissions__c.field-meta.xml
<CustomField>
    <fullName>Active_Submissions__c</fullName>
    <label>Active Submissions</label>
    <summaryFilterItems>
        <field>Candidate_Submission__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Placed, Rejected, Withdrawn</value>
    </summaryFilterItems>
    <summaryForeignKey>Candidate_Submission__c.Candidate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>