force-app/main/default/objects/Candidate__c/fields/Candidate_Source__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Source__c</fullName>
    <label>Candidate Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Indeed</fullName>
            </value>
            <value>
                <fullName>Dice</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Career Fair</fullName>
            </value>
            <value>
                <fullName>Company Website</fullName>
            </value>
            <value>
                <fullName>Previous Placement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>