force-app/main/default/objects/Candidate__c/fields/Do_Not_Submit__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Submit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Submit</label>
    <type>Checkbox</type>
</CustomField>