force-app/main/default/objects/Candidate__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High School Diploma</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>Ph.D.</fullName>
            </value>
            <value>
                <fullName>Post Doctorate</fullName>
            </value>
            <value>
                <fullName>Associate&apos;s Degree</fullName>
            </value>
            <value>
                <fullName>Bachelor&apos;s Degree</fullName>
            </value>
            <value>
                <fullName>Master&apos;s Degree</fullName>
            </value>
            <value>
                <fullName>Professional Certification</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>