force-app/main/default/objects/Candidate__c/fields/Expected_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Expected_Pay_Rate__c</fullName>
    <label>Expected Pay Rate ($/hr)</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>