force-app/main/default/objects/Candidate__c/fields/Willing_to_Relocate__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_Relocate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Willing to Relocate</label>
    <type>Checkbox</type>
</CustomField>