force-app/main/default/objects/Candidate__c/fields/Work_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Work_Authorization__c</fullName>
    <label>Work Authorization</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US Citizen</fullName>
            </value>
            <value>
                <fullName>Green Card</fullName>
            </value>
            <value>
                <fullName>H1-B</fullName>
            </value>
            <value>
                <fullName>H4-EAD</fullName>
            </value>
            <value>
                <fullName>TN Visa</fullName>
            </value>
            <value>
                <fullName>OPT/CPT</fullName>
            </value>
            <value>
                <fullName>Canadian Citizen</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>