force-app/main/default/objects/Candidate__c/validationRules/Experience_must_be_between_0_and_50.validationRule-meta.xml
<ValidationRule>
    <fullName>Experience_must_be_between_0_and_50</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Years_of_Experience__c &lt; 0, Years_of_Experience__c &gt; 50 )</errorConditionFormula>
    <errorDisplayField>Years_of_Experience__c</errorDisplayField>
    <errorMessage>Years of experience must be between 0 and 50</errorMessage>
</ValidationRule>