force-app/main/default/objects/Candidate__c/validationRules/LinkedIn_URL_must_be_valid.validationRule-meta.xml
<ValidationRule>
    <fullName>LinkedIn_URL_must_be_valid</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISBLANK(LinkedIn_URL__c)), NOT(BEGINS(LinkedIn_URL__c, &apos;https://www.linkedin.com/&apos;)), NOT(BEGINS(LinkedIn_URL__c, &apos;https://linkedin.com/&apos;)) )</errorConditionFormula>
    <errorDisplayField>LinkedIn_URL__c</errorDisplayField>
    <errorMessage>LinkedIn URL must begin with https://linkedin.com/ or https://www.linkedin.com/</errorMessage>
</ValidationRule>